# Journal

./: .gitignore  CMakeLists.txt  README.md
include/: JournalEntry.hpp  MainWindow.hpp
source/: CMakeLists.txt  JournalEntry.cpp  MainWindow.cpp  main.cpp  test.cpp
